@@ -146,7 +146,7 @@ Process_Per_Connection_Logging_Server::run_master (int argc, char *argv[])
 int
 Process_Per_Connection_Logging_Server::run_worker (int, char *argv[])
 {
-  int client_handle_i = atoi (argv[2]);
+  intptr_t client_handle_i = atoi (argv[2]);
   // Some compilers don't like reinterpret_casting an int to an int, so
   // only do reinterpret_cast on Windows.
 #if defined (ACE_WIN32)
