@@ -2,6 +2,7 @@
 
 #define  ACE_BUILD_SVC_DLL
 #include "Benchmark_Performance.h"
+#include "ace/Basic_Types.h"
 
 ACE_RCSID(Synch_Benchmarks, Benchmark_Performance, "$Id$")
 
@@ -53,7 +54,7 @@ Benchmark_Performance::fini (void)
 void *
 Benchmark_Performance::svc_run (Benchmark_Performance *bp)
 {
-  return (void *) (bp->svc () == -1 ? (long)-1 : (long)0);
+  return (void *) (bp->svc () == -1 ? (intptr_t) -1 : (intptr_t) 0);
 }
 
 #endif /* ACE_HAS_THREADS */
